refactor: replace string formatting with String.format() for consistency
Replace all instances of .formatted() with String.format() for string formatting to maintain consistency across the codebase. This change makes the code style more uniform and easier to maintain.